// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`notion-cli CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > db help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  Database operations and SQLite replica sync

USAGE
  notion db <subcommand> [flags]

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)

SUBCOMMANDS
  info         Display information about a Notion database
  track        Adopt a Notion data source into a workspace (the adoption verb)
  sync         Reconcile an established workspace, or run the watch daemon with --watch
  export       Export rows, schema, and sync metadata from SQLite
  status       Print workspace sync status
  conflicts    Inspect and resolve SQLite sync conflicts
  forget       Archive or forget a page locally
  restore      Restore a forgotten page locally
  doctor       Print diagnostics
",
}
`;

exports[`notion-cli CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid integer 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Invalid value for flag --concurrency: "nope". Expected a string representing a finite number (notion 0.1.0)
",
  "stdout": "DESCRIPTION
  Read-only: report the live in-sync decision per file in git-porcelain words (never mutates)

USAGE
  notion md status [flags] <path...>

ARGUMENTS
  path... string    Local .nmd file or directory tree (--recursive selects flat batch mode)

FLAGS
  --recursive, -r          Discover existing .nmd files recursively under a directory target
  --concurrency integer    Maximum number of .nmd files to reconcile concurrently
  --json                   Emit machine-readable JSON instead of git-porcelain text

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
[time] ERROR (#73): ~effect/cli/CliError/ShowHelp: Help requested
    at <anonymous> (<node_modules>/effect/dist/unstable/cli/Command.js:1077:34)
",
}
`;

exports[`notion-cli CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid integer with json output (stdout guard) 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "DESCRIPTION
  Read-only: report the live in-sync decision per file in git-porcelain words (never mutates)

USAGE
  notion md status [flags] <path...>

ARGUMENTS
  path... string    Local .nmd file or directory tree (--recursive selects flat batch mode)

FLAGS
  --recursive, -r          Discover existing .nmd files recursively under a directory target
  --concurrency integer    Maximum number of .nmd files to reconcile concurrently
  --json                   Emit machine-readable JSON instead of git-porcelain text

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)

ERROR
  Invalid value for flag --concurrency: "nope". Expected a string representing a finite number (notion 0.1.0)
[time] ERROR (#73): ~effect/cli/CliError/ShowHelp: Help requested
    at <anonymous> (<node_modules>/effect/dist/unstable/cli/Command.js:1077:34)
",
  "stdout": "",
}
`;

exports[`notion-cli CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > missing required database id 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Missing required argument: database-id (notion 0.1.0)
",
  "stdout": "DESCRIPTION
  Display information about a Notion database

USAGE
  notion db info [flags] <database-id>

ARGUMENTS
  database-id string    The Notion database ID to operate on

FLAGS
  --token, -t string     Notion API token (defaults to NOTION_API_TOKEN env var)
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
[time] ERROR (#73): ~effect/cli/CliError/ShowHelp: Help requested
    at <anonymous> (<node_modules>/effect/dist/unstable/cli/Command.js:1077:34)
",
}
`;

exports[`notion-cli CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > root help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  Notion CLI - database operations, schema generation, and markdown sync

USAGE
  notion <subcommand> [flags]

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)

SUBCOMMANDS
  edit      Edit a Notion page in $EDITOR via an ephemeral .nmd session, then push the change through the sync engine; \`--read-only\` inspects without pushing
  schema    Schema generation commands
  db        Database operations and SQLite replica sync
  md        Frictionless Notion enhanced Markdown sync, local object GC, and editor surfaces
",
}
`;

exports[`notion-cli CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > version 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "notion v0.1.0
",
}
`;
